--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,8 +1,9 @@
 .modalBackground {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(200, 200, 200);
+    background-color: rgba(1, 41, 110, 0.4);
     position: fixed;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +17,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: column;
-    padding: 25px;
+    padding: 15px 25px;
 }
 
 .modalContainer .title {
@@ -33,7 +34,7 @@
 .titleCloseBtn button {
     background-color: transparent;
     border: none;
-    font-size: 25px;
+    font-size: 23px;
     cursor: pointer;
 }
 
