--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -7,18 +7,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 .modalContainer {
     width: 500px;
-    height: 500px;
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: column;
     padding: 15px 25px;
+    z-index: 10;
 }
+
 
 .modalContainer .title {
     display: inline-block;
